final colors set

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-	<div class="shell brown__bg--15 pad10">
+	<section class="frame-brown">
 	<!-- SCENE BG AND MAIN BORDER -->
-		<div class="flex5 blue__bg--40 pad7 column blue__drop-shadow--10 border-radius10"> <!-- Scene and Choices Wrapper -->
+		<div class="frame-blue"> <!-- Scene and Choices Wrapper -->
 			<div class="flex1 column">
 			<!-- SCENE -->
 				<div class="flex2 choice-orientation blue__inner-shadow--20 blue__bg--30 margin10-bottom border-radius5">
@@ -76,7 +76,7 @@
 							"/>
 							<polygon
 								id="bowtie-accents"
-								class="brown__fill--18"
+								class="brown__fill--15"
 								points="28,212.2 25.2,214 25,214 22,212.2 22,216 25,214 25.2,214 28,216
 							"/>
 							<polygon
@@ -104,14 +104,14 @@
 								/>
 								<circle
 									id="freckle-5"
-									class="brown__fill--58"
+									class="brown__fill--60"
 									cx="19"
 									cy="195"
 									r="1"
 								/>
 								<circle
 									id="freckle-4"
-									class="brown__fill--55"
+									class="brown__fill--60"
 									cx="24"
 									cy="190"
 									r="1"
@@ -125,7 +125,7 @@
 								/>
 								<circle
 									id="freckle-2"
-									class="brown__fill--52"
+									class="brown__fill--60"
 									cx="24"
 									cy="180"
 									r="1"
@@ -296,7 +296,7 @@
 								<g id="monocle-shadow">
 									<rect
 										id="monocle-shadow_handle"
-										class="brown__fill--66"
+										class="brown__fill--65"
 										x="37"
 										y="156"
 										width="1"
@@ -304,7 +304,7 @@
 									/>
 									<path
 										id="monocle-shadow_bottom"
-										class="brown__fill--66"
+										class="brown__fill--65"
 										d="M30,163c-3.7,0-6.7-2.9-7-6.5c0,0.2,0,0.3,0,0.5c0,3.9,3.1,7,7,7
 										c2.8,0,5.2-1.6,6.3-4H40v-1h-3.7C35.2,161.4,32.8,163,30,163z"
 									/>
@@ -355,22 +355,22 @@
 									<g id="stars">
 										<polygon
 											id="star-bottom"
-											class="red__fill--40"
+											class="red__fill--45"
 											points="26.7,125.3 25,122 23.3,125.3 20,127 23.3,128.7 25,132 26.7,128.7 30,127"
 										/>
 										<polygon
 											id="star-3"
-											class="red__fill--50"
+											class="red__fill--45"
 											points="40,110 39,108 38,110 36,111 38,112 39,114 40,112 42,111"
 										/>
 										<polygon
 											id="star-2"
-											class="red__fill--70"
+											class="red__fill--45"
 											points="35.7,78.3 34,75 32.3,78.3 29,80 32.3,81.7 34,85 35.7,81.7 39,80"
 										/>
 										<polygon
 											id="star-top"
-											class="red__fill--60"
+											class="red__fill--45"
 											points="36,11 35,9 34,11 32,12 34,13 35,15 36,13 38,12"
 										/>
 									</g>
@@ -409,14 +409,14 @@
 					>
 						<path
 							id="selector-outside"
-							class="blue__fill--35"
+							class="blue__fill--40"
 							d="M280,166l-134-19l20,133c-87,133-87,306,0,439l-19,134l133-19c133,87,306,87,439,0
 						l134,19l-19-133c87-133,87-306,0-439l19-134l-133,19C587,78,413,78,280,166z M712,288c117,117,117,307,0,424c-117,117-307,117-424,0
 						s-117-307,0-424S595,171,712,288z"
 						/>
 						<circle
 							id="selector-inside"
-							class="blue__fill--33"
+							class="blue__fill--35"
 							cx="500"
 							cy="500"
 							r="150"
@@ -434,6 +434,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 </body>
 </html>
