--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <body>
 	<section class="frame-brown">
-	<!-- SCENE BG AND MAIN BORDER -->
-		<div class="frame-blue"> <!-- Scene and Choices Wrapper -->
-			<div class="flex1 column">
+		<div class="frame-blue">
+			<div class="app-container">
 			<!-- SCENE -->
 				<div class="flex2 choice-orientation blue__inner-shadow--20 blue__bg--30 margin10-bottom border-radius5">
 					<div class="flex1">
