--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="frame-blue">
 			<div class="app-container">
 			<!-- SCENE -->
-				<div class="flex2 choice-orientation blue__inner-shadow--20 blue__bg--30 margin10-bottom border-radius5">
+				<div class="scene">
 
 					<!-- SVG - JO -->
 						<svg
