blue50 added, working on bem

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-	<section class="frame-brown">
-		<div class="frame-blue">
-			<div class="app-container">
+	<section class="box">
+		<div class="box__blue">
+			<div class="dapper-container">
 			<!-- SCENE -->
 				<div class="scene">
 
