--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 	<section class="box">
-		<div class="box__blue">
-			<div class="dapper-container">
+		<div class="box__1--blue50">
+			<div class="box__1--column">
 			<!-- SCENE -->
 				<div class="scene">
 
@@ -383,7 +383,7 @@
 
 				</div>
 			<!-- CHOICES -->
-				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
+				<div class="choices"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
