button wrappers now set at 4 instead of 2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<section class="box">
 		<div class="box__1--blue50">
 			<div class="box__1--column">
-			<!-- SCENE -->
 				<div class="scene">
 
 					<!-- SVG - JO -->
@@ -382,10 +381,8 @@
 						</svg>	
 
 				</div>
-			<!-- CHOICES -->
-				<div class="choices"> <!-- CHOICE WRAPER AND BG -->
-				<!-- LEFT COLUMN -->
-					<div class="flex2 column">
+				<div class="choices">
+					<div class="box__4--column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
 							<p class="choice-font choice-fontsize blue__color--85">So, you make apps?</p>
 						</a>
@@ -422,7 +419,7 @@
 						/>
 					</svg>
 				<!-- RIGHT COLUMN -->
-					<div class="flex2 column">
+					<div class="box__4--column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="adventure.html">
 							<p class="choice-font choice-fontsize blue__color--85">I'm questing for adventure!</p>
 						</a>
