buttons restyled and compacted

--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
 				</div>
 				<div class="choices">
 					<div class="box__4--column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
-							<p class="choice-font choice-fontsize blue__color--85">So, you make apps?</p>
+						<a class="choices__button" href="what-kind-of-apps-do-you-make.html">
+							So, you make apps?
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="describe-your-app-idea.html">
-							<p class="choice-font choice-fontsize blue__color--85">Can you make my app?</p>
+						<a class="choices__button" href="describe-your-app-idea.html">
+							Can you make my app?
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -420,11 +420,11 @@
 					</svg>
 				<!-- RIGHT COLUMN -->
 					<div class="box__4--column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="adventure.html">
-							<p class="choice-font choice-fontsize blue__color--85">I'm questing for adventure!</p>
+						<a class="choices__button" href="adventure.html">
+							I'm questing for adventure!
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
-							<p class="choice-font choice-fontsize blue__color--85">Can I contact you?</p>
+						<a class="choices__button" href="lets-get-started.html">
+							Can I contact you?
 						</a>
 					</div>
 				</div>
