selector and chat cloud

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 							/>
 						</svg>
 					<!-- CHAT BUBBLE -->
-						<div class="flex2 pad10--bottom pad20--top">
-							<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
+						<div class="chat-cloud">
+							<div class="flex1 brown__bg--75 vertical-center border-radius10 pad10">
 							<h1 class="chat-font h1-main brown__color--20">We build magical apps!</h1>
 							</div>
 						</div>
@@ -394,7 +394,7 @@
 					<svg
 						version="1.1"
 						id="bioware-style-selector"
-						class="flex1 hide"
+						class="bioware-style-conversation-wheel"
 						xmlns="http://www.w3.org/2000/svg"
 						xmlns:xlink="http://www.w3.org/1999/xlink"
 						x="0px"
