--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<section class="box">
+	<div class="box">
 		<div class="box__1--blue50">
 			<div class="box__1--column">
 				<div class="scene">
@@ -430,6 +430,6 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 </body>
 </html>
