cleaning up base scss

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					<!-- CHAT BUBBLE -->
 						<div class="chat-cloud">
 							<div class="flex1 brown__bg--75 vertical-center border-radius10 pad10">
-							<h1 class="chat-font h1-main brown__color--20">We build magical apps!</h1>
+							<h1 class="">We build magical apps!</h1>
 							</div>
 						</div>
 					<!-- SVG - RYAN -->
@@ -384,7 +384,7 @@
 				<div class="choices">
 					<div class="box__4--column">
 						<a class="choices__button" href="what-kind-of-apps-do-you-make.html">
-							So, you make apps?
+							<h2>So, you make apps?</h2>
 						</a>
 						<a class="choices__button" href="describe-your-app-idea.html">
 							Can you make my app?
