document outline correct. boom.

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					<!-- CHAT BUBBLE -->
 						<div class="chat-cloud">
 							<div class="flex1 brown__bg--75 vertical-center border-radius10 pad10">
-							<h1 class="">We build magical apps!</h1>
+							<h1>We build magical apps!</h1>
 							</div>
 						</div>
 					<!-- SVG - RYAN -->
@@ -387,7 +387,7 @@
 							<h2>So, you make apps?</h2>
 						</a>
 						<a class="choices__button" href="describe-your-app-idea.html">
-							Can you make my app?
+							<h2>Can you make my app?</h2>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -421,10 +421,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="box__4--column">
 						<a class="choices__button" href="adventure.html">
-							I'm questing for adventure!
+							<h2>I'm questing for adventure!</h2>
 						</a>
 						<a class="choices__button" href="lets-get-started.html">
-							Can I contact you?
+							<h2>Can I contact you?</h2>
 						</a>
 					</div>
 				</div>
