chat bubble refactored

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 							/>
 						</svg>
 					<!-- CHAT BUBBLE -->
-						<div class="chat-cloud">
-							<div class="flex1 brown__bg--75 vertical-center border-radius10 pad10">
+						<div class="chat">
+							<div class="flex1 vertical-center border-radius10">
 							<h1>We build magical apps!</h1>
 							</div>
 						</div>
