--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 						</svg>
 					<!-- CHAT BUBBLE -->
 						<div class="chat">
-							<h1>We build magical apps!</h1>
+							<h1 class="h1__index">We build magical apps!</h1>
 						</div>
 					<!-- SVG - RYAN -->
 						<svg
