refactored adventure, added author to index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>We Build Magical Apps at Dapper Gentlemen</title>
+	<meta name="author" content="Ryan Allen">
 	<meta name="description" content="At Dapper Gentlemen we are advancing mobile design and development in magical ways. Be a part of it with us.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
