formatted text for index and adventure

--- a/adventure.html
+++ b/adventure.html
@@ -200,7 +200,7 @@
 						</svg>
 					<!-- CHAT BUBBLE -->
 						<div class="chat">
-							<h1 class="h1__index">You look like a brave soul. Check back later, I may have a quest for you.</h1>
+							<h1 class="h1__8">You look brave. Check back later, I may have a quest for you.</h1>
 						</div>
 					<!-- SVG - RYAN -->
 						<svg
@@ -384,10 +384,10 @@
 				<div class="choices">
 					<div class="box__4--column">
 						<a class="choices__button" href="what-kind-of-apps-do-you-make.html">
-							<h2>There had better be robots.</h2>
+							<h2 class="h2__3">There had better be robots.</h2>
 						</a>
 						<a class="choices__button" href="describe-your-app-idea.html">
-							<h2>I hope it has dragons.</h2>
+							<h2 class="h2__3">I hope it has dragons.</h2>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -421,10 +421,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="box__4--column">
 						<a class="choices__button" href="adventure.html">
-							<h2>I'm brave and attractive.</h2>
+							<h2 class="h2__3">I'm brave and attractive.</h2>
 						</a>
 						<a class="choices__button" href="lets-get-started.html">
-							<h2>Can I contact you?</h2>
+							<h2 class="h2__3">Can I contact you?</h2>
 						</a>
 					</div>
 				</div>
