--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						</svg>
 					<!-- CHAT BUBBLE -->
 						<div class="chat">
-							<h1 class="h1__index">We build magical apps!</h1>
+							<h1 class="h1__12">We build magical apps!</h1>
 						</div>
 					<!-- SVG - RYAN -->
 						<svg
@@ -383,10 +383,10 @@
 				<div class="choices">
 					<div class="box__4--column">
 						<a class="choices__button" href="what-kind-of-apps-do-you-make.html">
-							<h2>So, you make apps?</h2>
+							<h2 class="h2__3">So, you make apps?</h2>
 						</a>
 						<a class="choices__button" href="describe-your-app-idea.html">
-							<h2>Can you make my app?</h2>
+							<h2 class="h2__3">Can you make my app?</h2>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -420,10 +420,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="box__4--column">
 						<a class="choices__button" href="adventure.html">
-							<h2>I'm questing for adventure!</h2>
+							<h2 class="h2__3">I'm questing for adventure!</h2>
 						</a>
 						<a class="choices__button" href="lets-get-started.html">
-							<h2>Can I contact you?</h2>
+							<h2 class="h2__3">Can I contact you?</h2>
 						</a>
 					</div>
 				</div>
