--- a/adventure.html
+++ b/adventure.html
@@ -383,10 +383,10 @@
 				</div>
 				<div class="choices">
 					<div class="box__4--column">
-						<a class="choices__button" href="what-kind-of-apps-do-you-make.html">
+						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">There had better be robots.</h2>
 						</a>
-						<a class="choices__button" href="describe-your-app-idea.html">
+						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">I hope it has dragons.</h2>
 						</a>
 					</div>
@@ -420,7 +420,7 @@
 					</svg>
 				<!-- RIGHT COLUMN -->
 					<div class="box__4--column">
-						<a class="choices__button" href="adventure.html">
+						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">I'm brave and attractive.</h2>
 						</a>
 						<a class="choices__button" href="lets-get-started.html">
