tweaking h1 paddings / margins

--- a/adventure.html
+++ b/adventure.html
@@ -200,7 +200,9 @@
 						</svg>
 					<!-- CHAT BUBBLE -->
 						<div class="chat">
-							<h1 class="h1__8">You look brave. Check back later, I may have a quest for you.</h1>
+							<div class="chat__cloud">
+								<h1 class="h1__8">You look brave. Return later, I may have a quest.</h1>
+							</div>
 						</div>
 					<!-- SVG - RYAN -->
 						<svg
