--- a/describe-your-app-idea.html
+++ b/describe-your-app-idea.html
@@ -199,7 +199,9 @@
 						</svg>
 					<!-- CHAT BUBBLE -->
 						<div class="chat">
-							<h1 class="h1__12">Tell me your app idea.</h1>
+							<div class="chat__cloud">
+								<h1 class="h1__12">Tell me your app idea.</h1>
+							</div>
 						</div>
 					<!-- SVG - RYAN -->
 						<svg
