content edits and style updates

--- a/lets-get-started.html
+++ b/lets-get-started.html
@@ -200,7 +200,7 @@
 					<!-- CHAT BUBBLE -->
 						<div class="chat">
 							<div class="chat__cloud">
-								<h1 class="h1__10">Tell us your idea that we may build together.</h1>
+								<h1 class="h1__10">Tell us your idea so we can build it together.</h1>
 							</div>
 						</div>
 					<!-- SVG - RYAN -->
