--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="box">
 		<div class="box__1--blue50">
 			<div class="box__1--column">
-				<div class="scene">
+				<div class="scene__index">
 
 					<img class="flex1 svg" src="img/svg/avatar-jo.svg" alt="Ryan Allen">
 
