adventure scene set up empty

--- a/adventure.html
+++ b/adventure.html
@@ -15,8 +15,7 @@
 	<div class="box">
 		<div class="box__1--blue50">
 			<div class="box__1--column">
-				<div class="scene">
-
+				<div class="scene__adventure">
 				</div>
 				<div class="choices"> <!-- You look brave. Return later, I may have a quest. -->
 					<div class="box__4--column">
