testing vertical boxes in illustrator.

--- a/adventure.html
+++ b/adventure.html
@@ -17,7 +17,7 @@
 			<div class="box__1--column">
 				<div class="scene__adventure">
 				</div>
-				<div class="choices"> <!-- You look brave. Return later, I may have a quest. -->
+				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
 					<div class="box__4--column">
 						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">There had better be robots.</h2>
