testing first container set

--- a/adventure.html
+++ b/adventure.html
@@ -16,6 +16,8 @@
 		<div class="box__1--blue50">
 			<div class="box__1--column">
 				<div class="scene__adventure">
+					<div class="box2"></div>
+					<div class="box1"></div>
 				</div>
 				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
 					<div class="box__4--column">
