svg set as bg image fixes all my alignment issues. note left for tomorrow

--- a/adventure.html
+++ b/adventure.html
@@ -15,9 +15,9 @@
 	<div class="box">
 		<div class="box__1--blue50">
 			<div class="box__1--column">
-				<div class="scene__adventure">
+				<!-- ADD STARS TO THIS BG AND LET THEM REPEAT --> <div class="scene__adventure"> <!-- ADD STARS TO THIS BG AND LET THEM REPEAT -->
 					<div class="box2"></div>
-					<div class="box1"></div>
+					<div class="box1__astronaut-ryan"></div>
 				</div>
 				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
 					<div class="box__4--column">
