--- a/adventure.html
+++ b/adventure.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-	<div class="box">
+	<div class="box1__shell">
 		<div class="box__1--blue50">
 			<div class="box__1--column">
-				<!-- ADD STARS TO THIS BG AND LET THEM REPEAT --> <div class="scene__adventure"> <!-- ADD STARS TO THIS BG AND LET THEM REPEAT -->
+				<div class="scene__adventure">
 					<div class="box2"></div>
 					<div class="box1__astronaut-ryan"></div>
 				</div>
