blue frame refactored

--- a/adventure.html
+++ b/adventure.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="box1__shell">
-		<div class="box__1--blue50">
+		<div class="box1__blue-frame">
 			<div class="box__1--column">
 				<div class="scene__adventure">
 					<div class="box2"></div>
