selector name changes

--- a/adventure.html
+++ b/adventure.html
@@ -14,11 +14,17 @@
 <body>
 	<div class="box1__shell">
 		<div class="box1__blue-frame">
-			<div class="box__1--column">
+			<div class="box1--column">
+				<!-- SCENE -->
 				<div class="scene__adventure">
-					<div class="box2"></div>
+					<div class="box2">
+						<div class="box1--column">
+
+						</div>
+					</div>
 					<div class="box1__astronaut-ryan"></div>
 				</div>
+				<!-- CHOICES -->
 				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
 					<div class="box__4--column">
 						<a class="choices__button" href="index.html">
