--- a/adventure.html
+++ b/adventure.html
@@ -19,10 +19,10 @@
 				<div class="scene__adventure">
 					<div class="box2">
 						<div class="box1--column">
-
+							<div class="scene__adventure--planet-comet-bg"></div>
 						</div>
 					</div>
-					<div class="box1__astronaut-ryan"></div>
+					<div class="scene__adventure--astronaut-ryan-bg"></div>
 				</div>
 				<!-- CHOICES -->
 				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
