type in chatcloud

--- a/adventure.html
+++ b/adventure.html
@@ -19,7 +19,17 @@
 				<div class="scene__adventure">
 					<div class="box2">
 						<div class="box1--column">
-							<div class="scene__adventure--planet-comet-bg"></div>
+							<div class="box1">
+								<div class="scene__adventure--planet-bg">
+								</div>
+								<div class="scene__adventure--comet-bg"></div>
+							</div>
+							<div class="box1">
+								<div class="scene__adventure--chat-cloud">
+									<h1 class="h1__5">You look brave.<br>Return later, I may have a quest for you.</h1>
+								</div>
+								<div class="scene__adventure--chat-arrow"></div>
+							</div>
 						</div>
 					</div>
 					<div class="scene__adventure--astronaut-ryan-bg"></div>
