--- a/adventure.html
+++ b/adventure.html
@@ -26,7 +26,7 @@
 							</div>
 							<div class="box1">
 								<div class="scene__adventure--chat-cloud">
-									<h1 class="h1__5">You look brave.<br>Return later, I may have a quest for you.</h1>
+									<h1 class="h1__5--blue">You look brave.<br>Return later, I may have a quest for you.</h1>
 								</div>
 								<div class="scene__adventure--chat-arrow"></div>
 							</div>
