removed unused svgs, updtated selector svg

--- a/adventure.html
+++ b/adventure.html
@@ -12,19 +12,19 @@
 </head>
 
 <body>
-	<div class="box1__shell">
-		<div class="box1__blue-frame">
-			<div class="box1--column">
+	<div class="flex1__shell">
+		<div class="flex1__blue-frame">
+			<div class="flex1--column">
 				<!-- SCENE -->
 				<div class="scene__adventure">
-					<div class="box2">
-						<div class="box1--column">
-							<div class="box1">
+					<div class="flex2">
+						<div class="flex1--column">
+							<div class="flex1">
 								<div class="scene__adventure--planet-bg">
 								</div>
 								<div class="scene__adventure--comet-bg"></div>
 							</div>
-							<div class="box1">
+							<div class="flex1">
 								<div class="scene__adventure--chat-cloud">
 									<h1 class="h1__5--blue">You look brave.<br>Return later, I may have a quest for you.</h1>
 								</div>
@@ -36,7 +36,7 @@
 				</div>
 				<!-- CHOICES -->
 				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
-					<div class="box__4--column">
+					<div class="flex__4--column">
 						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">There had better be robots.</h2>
 						</a>
@@ -45,35 +45,11 @@
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
-					<svg
-						version="1.1"
-						id="bioware-style-selector"
-						class="bioware-style-conversation-wheel"
-						xmlns="http://www.w3.org/2000/svg"
-						xmlns:xlink="http://www.w3.org/1999/xlink"
-						x="0px"
-						y="0px"
-						viewBox="0 0 1000 1000"
-						enable-background="new 0 0 1000 1000"
-						xml:space="preserve"
-					>
-						<path
-							id="selector-outside"
-							class="blue__fill--40"
-							d="M280,166l-134-19l20,133c-87,133-87,306,0,439l-19,134l133-19c133,87,306,87,439,0
-						l134,19l-19-133c87-133,87-306,0-439l19-134l-133,19C587,78,413,78,280,166z M712,288c117,117,117,307,0,424c-117,117-307,117-424,0
-						s-117-307,0-424S595,171,712,288z"
-						/>
-						<circle
-							id="selector-inside"
-							class="blue__fill--35"
-							cx="500"
-							cy="500"
-							r="150"
-						/>
-					</svg>
+				<div class="bioware-style-conversation-wheel">
+				<img src="img/svg/selector.svg" alt="">
+				</div>
 				<!-- RIGHT COLUMN -->
-					<div class="box__4--column">
+					<div class="flex__4--column">
 						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">I'm brave and attractive.</h2>
 						</a>
