--- a/adventure.html
+++ b/adventure.html
@@ -45,9 +45,7 @@
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
-				<div class="bioware-style-conversation-wheel">
-				<img src="img/svg/selector.svg" alt="">
-				</div>
+				<img class="bioware-style-conversation-wheel" src="img/svg/selector.svg" alt="">
 				<!-- RIGHT COLUMN -->
 					<div class="flex__4--column">
 						<a class="choices__button" href="index.html">
