selector name change

--- a/adventure.html
+++ b/adventure.html
@@ -14,11 +14,11 @@
 <body>
 	<div class="flex1__shell">
 		<div class="flex1__blue-frame">
-			<div class="flex1--column">
+			<div class="flex1__column">
 				<!-- SCENE -->
 				<div class="scene__adventure">
 					<div class="flex2">
-						<div class="flex1--column">
+						<div class="flex1__column">
 							<div class="flex1">
 								<div class="scene__adventure--planet-bg">
 								</div>
