--- a/adventure.html
+++ b/adventure.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-	<div class="flex1__shell">
-		<div class="flex1__blue-frame">
-			<div class="flex1__column">
+	<div class="shell">
+		<div class="blue-frame">
+			<div class="column">
 				<!-- SCENE -->
 				<div class="scene__adventure">
 					<div class="flex2">
-						<div class="flex1__column">
+						<div class="column">
 							<div class="flex1">
 								<div class="scene__adventure--planet-bg">
 								</div>
@@ -36,7 +36,7 @@
 				</div>
 				<!-- CHOICES -->
 				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
-					<div class="flex__4--column">
+					<div class="column4">
 						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">There had better be robots.</h2>
 						</a>
@@ -47,7 +47,7 @@
 				<!-- SVG - SELECTOR -->
 				<img class="bioware-style-conversation-wheel" src="img/svg/selector.svg" alt="">
 				<!-- RIGHT COLUMN -->
-					<div class="flex__4--column">
+					<div class="column4">
 						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">I'm brave and attractive.</h2>
 						</a>
