--- a/adventure.html
+++ b/adventure.html
@@ -35,7 +35,7 @@
 					<div class="scene__adventure--astronaut-ryan-bg"></div>
 				</div>
 				<!-- CHOICES -->
-				<div class="choices"> <!-- You look brave. Return later, I may have a quest. (should fit)-->
+				<div class="choices">
 					<div class="column4">
 						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">There had better be robots.</h2>
@@ -45,7 +45,7 @@
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
-				<img class="bioware-style-conversation-wheel" src="img/svg/selector.svg" alt="">
+				<img class="bioware-style-conversation-wheel" src="img/svg/selector.svg" alt="Conversation Wheel">
 				<!-- RIGHT COLUMN -->
 					<div class="column4">
 						<a class="choices__button" href="index.html">
