changed index content and formating to match adventure

--- a/index.html
+++ b/index.html
@@ -6,67 +6,46 @@
 	<meta name="author" content="Ryan Allen">
 	<meta name="description" content="At Dapper Gentlemen we are advancing mobile design and development in magical ways. Be a part of it with us.">
 	<link rel="stylesheet" href="style/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-	<div class="box">
-		<div class="box__1--blue50">
-			<div class="box__1--column">
-				<div class="scene__index">
-
-					<img class="flex1 svg" src="img/svg/avatar-jo.svg" alt="Ryan Allen">
-
-						<div class="chat">
-							<div class="chat__cloud">
-								<h1 class="h1__12">We build magical apps!</h1>
+	<div class="shell">
+		<div class="blue-frame">
+			<div class="column">
+				<!-- SCENE -->
+				<div class="scene__adventure">
+					<div class="flex2">
+						<div class="column">
+							<div class="flex1">
+								<div class="scene__adventure--planet-bg">
+								</div>
+								<div class="scene__adventure--comet-bg"></div>
+							</div>
+							<div class="flex1">
+								<div class="scene__adventure--chat-cloud">
+									<h1 class="h1__5--blue">Hello. What can we help you with?</h1>
+								</div>
+								<div class="scene__adventure--chat-arrow"></div>
 							</div>
 						</div>
-
-					<img class="flex1 svg" src="img/svg/avatar-ryan.svg" alt="Ryan Allen">
-
+					</div>
+					<div class="scene__adventure--astronaut-ryan-bg"></div>
 				</div>
+				<!-- CHOICES -->
 				<div class="choices">
-					<div class="box__4--column">
-						<a class="choices__button" href="what-kind-of-apps-do-you-make.html">
-							<h2 class="h2__3">So, you make apps?</h2>
+					<div class="column4">
+						<a class="choices__button" href="index.html">
+							<h2 class="h2__3">I heard you make apps.</h2>
 						</a>
-						<a class="choices__button" href="describe-your-app-idea.html">
-							<h2 class="h2__3">Can you make my app?</h2>
+						<a class="choices__button" href="index.html">
+							<h2 class="h2__3">I hope it has dragons.</h2>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
-					<svg
-						version="1.1"
-						id="bioware-style-selector"
-						class="bioware-style-conversation-wheel"
-						xmlns="http://www.w3.org/2000/svg"
-						xmlns:xlink="http://www.w3.org/1999/xlink"
-						x="0px"
-						y="0px"
-						viewBox="0 0 1000 1000"
-						enable-background="new 0 0 1000 1000"
-						xml:space="preserve"
-					>
-						<path
-							id="selector-outside"
-							class="blue__fill--40"
-							d="M280,166l-134-19l20,133c-87,133-87,306,0,439l-19,134l133-19c133,87,306,87,439,0
-						l134,19l-19-133c87-133,87-306,0-439l19-134l-133,19C587,78,413,78,280,166z M712,288c117,117,117,307,0,424c-117,117-307,117-424,0
-						s-117-307,0-424S595,171,712,288z"
-						/>
-						<circle
-							id="selector-inside"
-							class="blue__fill--35"
-							cx="500"
-							cy="500"
-							r="150"
-						/>
-					</svg>
+				<img class="bioware-style-conversation-wheel" src="img/svg/selector.svg" alt="Conversation Wheel">
 				<!-- RIGHT COLUMN -->
-					<div class="box__4--column">
-						<a class="choices__button" href="adventure.html">
+					<div class="column4">
+						<a class="choices__button" href="index.html">
 							<h2 class="h2__3">I'm questing for adventure!</h2>
 						</a>
 						<a class="choices__button" href="lets-get-started.html">
