--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2 class="h2__3">I heard you make apps.</h2>
 						</a>
 						<a class="choices__button" href="index.html">
-							<h2 class="h2__3">I hope it has dragons.</h2>
+							<h2 class="h2__3">Can you make my app?</h2>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
