--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							</div>
 							<div class="flex1">
 								<div class="scene__adventure--chat-cloud">
-									<h1 class="h1__5--blue">Hello. What can we help you with?</h1>
+									<h1 class="h1__5--blue">Hello! My name is Ryan Allen and I'm a designer.</h1>
 								</div>
 								<div class="scene__adventure--chat-arrow"></div>
 							</div>
@@ -35,10 +35,10 @@
 				<div class="choices">
 					<div class="column4">
 						<a class="choices__button" href="index.html">
-							<h2 class="h2__3">I heard you make apps.</h2>
+							<h2 class="h2__3">What kind of designer?</h2>
 						</a>
 						<a class="choices__button" href="index.html">
-							<h2 class="h2__3">Can you make my app?</h2>
+							<h2 class="h2__3">What have you made?</h2>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -46,7 +46,7 @@
 				<!-- RIGHT COLUMN -->
 					<div class="column4">
 						<a class="choices__button" href="index.html">
-							<h2 class="h2__3">I'm questing for adventure!</h2>
+							<h2 class="h2__3">Why are you in a space suit?</h2>
 						</a>
 						<a class="choices__button" href="lets-get-started.html">
 							<h2 class="h2__3">Can I contact you?</h2>
